[package]
name = "rrpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
resolvo = "0.2.0"
# rpm = "0.12.1"
rpmrepo_metadata = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
url = "2.4.1"
version-compare = "0.1.1"
