[package]
name = "resolvo-rpm"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking"] }
resolvo = "0.10"
rpmrepo_metadata = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
version-compare = "0.2"
